--- a/src/global.css
+++ b/src/global.css
@@ -170,3 +170,27 @@
     transform: translate(-20%, -10%);
   }
 }
+
+.custom-scroll::-webkit-scrollbar {
+  width: 10px; 
+  height: 10px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: #0097B2;
+  border-radius: 30px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #0097B2; 
+  border-radius: 30px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #0097B2; 
+}
+
+.custom-scroll {
+  scrollbar-width: medium; 
+  scrollbar-color: #0097B2 #0097B2; 
+}
